# NativeCrashCatcher

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: crash.cpp
app/src/main/java/com/sharry/sample/app/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
lib-breakpad/: build.gradle
lib-breakpad/src/main/: AndroidManifest.xml
lib-breakpad/src/main/cpp/: CMakeLists.txt  native-bridge.cpp
lib-breakpad/src/main/java/com/sharry/lib/breakpadnativecrashcatcher/: NativeCrashCatcherManager.java
lib-native-crash-catcher/src/main/cpp/: CMakeLists.txt  SampleCrashCatcher.cpp  SampleCrashCatcher.h  native-crash-catcher.cpp
lib-native-crash-catcher/src/main/java/com/sharry/lib/nativecrashcather/: NativeCrashCatcherManager.java
lib-unwind/: build.gradle
lib-unwind/src/main/: AndroidManifest.xml
lib-unwind/src/main/cpp/: CMakeLists.txt  Constants.h  SampleCrashCatcher.cpp  SampleCrashCatcher.h  native-bridge.cpp
lib-unwind/src/main/java/com/sharry/lib/mynativecrashcatcher/: NativeCrashCatcherManager.java
tools/mac/: crashLog.txt  minidump_stackwalk  test_crash.dmp
